feat: update Mui v6

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ct-mui",
-  "version": "1.0.1-beta.3",
+  "version": "2.0.0",
   "description": "基于 material-ui 组件库",
   "license": "MIT",
   "main": "dist/index.js",
@@ -52,7 +52,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@umijs/lint": "^4.0.0",
-    "dumi": "^2.2.1",
+    "dumi": "^2.4.13",
     "eslint": "^8.23.0",
     "father": "^4.1.0",
     "husky": "^8.0.1",
@@ -60,17 +60,17 @@
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^3.0.0",
     "prettier-plugin-packagejson": "^2.2.18",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "stylelint": "^14.9.1"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "5.0.0-alpha.126",
-    "@mui/material": "^5.12.0",
-    "@mui/utils": "^5.13.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@mui/icons-material": "^6",
+    "@mui/lab": "^6.0.0-beta.7",
+    "@mui/material": "^6",
+    "@mui/utils": "^6",
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0"
   },
